--- a/index.html
+++ b/index.html
@@ -1,13 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-    
+    <div class="BI">
+        <h1 class="size">Ek Takay Ahar by Bidyanondo Foundation</h1>
+        <P>
+            A very new and unique program began by Bidyanondo is 'Ek Takay Ahar', which refers to 'food for a single
+            penny'. Under this program hundreds of street dwelling children, beggars, elderly people and physically and
+            mentally challenged people hanging around streets or stations get their fundamental need of regular meals in
+            exchange of more than one taka.
+        </P>
+        <a class="buton" target="blank" href="www.donatenow.com">Donate Now</a>
+    </div>
+    <div class="style-two">
+        <h2>Make Your Donation</h2>
+        <h4>Happiness to poor people. More than million street people are being given dinner and gifts at a good hotel.
+            Our Programs are quite unique.</h4>
+
+        <a class="tkBColor" target="blank" href="www.donatenow.com">100tk</a>
+        <a class="tkBColor" target="blank" href="www.donatenow.com">500tk</a>
+        <a class="tkBColor" target="blank" href="www.donatenow.com">1000tk</a>
+        <a class="tkBColor" target="blank" href="www.donatenow.com">2000tk</a><br>
+        <input type="text" size="100px"><br>
+        <a class="buton" target="blank" href="www.donatenow.com">Donate Now</a>
+
+        <h2 class="style-two">Bidyanondo Orphanage plan</h1>
+            <h4>We serve the underprivileged community with cooked food, dry essential edible items</h4>
+    </div>
+    <section>
+        <div id="a">
+            <h3>Shampriti Orphanage</h3>
+            <img src="icons/Frame-1.png" />
+            <p>Bidyanondo established six orphanages in different parts of Bangladesh to protect vulnerable & endangered
+                children</p>
+        </div>
+        <div id="b">
+            <h3>Maya-kanon Orphanage</h3>
+            <img src="icons/shelter.png" />
+            <p>Bidyanondo established six orphanages in different parts of Bangladesh to protect vulnerable & endangered
+                children</p>
+        </div>
+        <div id="c">
+            <h3>Parijat Orphanage</h3>
+            <img src="icons/food.png" />
+            <p>Bidyanondo established six orphanages in different parts of Bangladesh to protect vulnerable & endangered
+                children</p>
+        </div>
+    </section>
+
+    <div class="style-two">
+        <h2>Contract with us</h2>
+        <h4>Our mission is to provide education, nourishment, mental and physical support to the distressed and to make
+            people self sufficient by permanently rehabilitating them.</h4>
+        <footer>
+            <p>Developed by MayaMish Ltd!</p>
+        </footer>
 </body>
+
 </html>
